--- a/config.env
+++ b/config.env
@@ -1,4 +1,4 @@
-NODE_ENV=production
+NODE_ENV=development
 PORT=3000
 USERNAME=Charles
 DATABASE=mongodb+srv://Charles:<PASSWORD>@cluster1.kdv5ocf.mongodb.net/finalProject?retryWrites=true&w=majority
@@ -10,5 +10,5 @@ JWT_COOKIE_EXPIRES_IN=90
 
 EMAIL_USERNAME=8c1aee1d8f2360
 EMAIL_HOST=sandbox.smtp.mailtrap.io
-EMAIL_PASSWORD=6255367c6c4148
+EMAIL_PASSWORD=6255367c6c4148s
 EMAIL_PORT=25
