--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"bcryptjs": "^2.4.3",
 		"cross-env": "^7.0.3",
+		"date-fns": "^3.6.0",
 		"dotenv": "^16.4.5",
 		"eslint": "^8.57.0",
 		"express": "^4.19.2",
