--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@stripe/stripe-js": "^4.0.0",
 		"bcryptjs": "^2.4.3",
+		"cors": "^2.8.5",
 		"cross-env": "^7.0.3",
 		"date-fns": "^3.6.0",
 		"dotenv": "^16.4.5",
@@ -26,10 +28,13 @@
 		"mongodb": "^6.5.0",
 		"mongoose": "^5.13.21",
 		"morgan": "^1.10.0",
+		"multer": "^1.4.5-lts.1",
 		"nodemailer": "^6.9.13",
 		"nodemon": "^3.1.0",
 		"prettier": "^3.2.5",
+		"sharp": "^0.33.4",
 		"slugify": "^1.6.6",
+		"stripe": "^7.63.1",
 		"validator": "^13.11.0",
 		"xss-clean": "^0.1.4"
 	}
